[package]
edition.workspace = true
license-file.workspace = true
license.workspace = true
name = "katana-merkle-trie"
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bonsai-trie = { git = "https://github.com/dojoengine/bonsai-trie", rev = "b6a99ff" }
katana-db.workspace = true
