[package]
edition.workspace = true
license-file.workspace = true
license.workspace = true
name = "snos-wrapper"
repository.workspace = true
version.workspace = true

[dependencies]
katana-primitives.workspace = true
katana-provider.workspace = true
katana-rpc-types.workspace = true
saya-provider.workspace = true

anyhow.workspace = true
async-trait.workspace = true
bigdecimal.workspace = true
dojo-utils.workspace = true
futures.workspace = true
itertools.workspace = true
# pathfinder-common.workspace = true
# pathfinder-crypto.workspace = true
# pathfinder-merkle-tree.workspace = true
# pathfinder-storage.workspace = true
# papyrus_storage.workspace = true
hex.workspace = true
prove_block.workspace = true
rpc-client.workspace = true
rpc-replay.workspace = true
serde.workspace = true
serde_json.workspace = true
starknet-crypto.workspace = true
starknet-os-types.workspace = true
# starknet-os.workspace = true
starknet.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true
# TODO: use features for each possible DA.
celestia-rpc = "0.4.0"
celestia-types = "0.5.0"

bitvec = "1.0.1"

blockifier = { git = "https://github.com/Moonsong-Labs/sequencer", rev = "6624e910c57db9a16f1607c1ed26f7d8f1114e73", features = [ "testing" ] }
# cairo-proof-parser = { git = "https://github.com/cartridge-gg/cairo-proof-parser.git", rev = "f175d58" }
cairo-vm = { git = "https://github.com/matzayonc/cairo-vm.git", rev = "59ceafbe7a10e03d41415994984e2578207172d3" }
cairo1-playground = { git = "https://github.com/matzayonc/cairo1-playground.git", rev = "26d44d9aa35ed06ff58f9f69f7cdd3d62c5853ae" }
# herodotus_sharp_playground = { git = "https://github.com/chudkowsky/herodotus_sharp_playground.git", rev = "db64bfd" }
prover-sdk = { git = "https://github.com/cartridge-gg/http-prover", rev = "24256d5" }
reqwest.workspace = true
# serde-felt = { git = "https://github.com/cartridge-gg/cairo-proof-parser.git", rev = "f175d58" }
starknet-providers = "0.11.0"
starknet_api = { git = "https://github.com/Moonsong-Labs/sequencer", rev = "6624e910c57db9a16f1607c1ed26f7d8f1114e73", features = [ "testing" ] }
tempdir = "0.3.7"

papyrus_storage = { git = "https://github.com/matzayonc/sequencer.git", rev = "889de94b8763d9811308ecb6da2bbf734385e8ea" }

[patch.'https://github.com/Moonsong-Labs/cairo-vm']
cairo-vm = { git = "https://github.com/matzayonc/cairo-vm.git", rev = "59ceafbe7a10e03d41415994984e2578207172d3" }
